# Installer

./: .clang-format  CMakeLists.txt  CMakePresets.json  tmp.back  vcpkg-configuration.json  vcpkg.json  项目开发规范.md
cmake/: ObjectConvert.cmake  setup_embedding.cmake
docs/: 项目开发规范.md
include/: installer_controller.hpp  resource.hpp
include/tar/: tar.hpp
src/: application.cpp  example.txt  file.cpp  installer_context.cpp  installer_controller.cpp  main.cpp  memory_chunk.cpp  memory_stream.cpp  microtar.cpp  tar.cpp  tar_archive.cpp  window_base.cpp  zstd_compression.cpp
src/assets/: helloworld.txt  installer.rc
src/include/: embed_assets.hpp  file.hpp  installer_context.hpp  microtar.hpp  resource.hpp  string_convertor.hpp  tar_archive.hpp  zstd_compression.hpp
src/include/memory_stream/: block_sizes.hpp  memory_chunk.hpp  memory_chunk_tests.hpp  memory_stream.hpp  memory_stream_tests.hpp
src/include/tar/: tar 打包格式文档.md  tar.hpp  tar_tests.hpp
src/include/win32/: application.hpp  main_window.hpp  window.hpp  window_base.hpp  window_resource.hpp
src/include/windows/: application.hpp  hwnd_subclass.hpp  hwnd_wrapper.hpp  hwnd_wrapper_hook.hpp  hwnd_wrapper_hook_tests.hpp  hwnd_wrapper_utils.hpp  window.hpp  window_resource.hpp
src/win32/: application.cpp  main_window.cpp  window.cpp  window_base.cpp  window_resource.cpp
src/windows/: application.cpp  hwnd_wrapper.cpp  window.cpp  window_resource.cpp
tests/: CMakeLists.txt  tar_tests.cpp
